objects/SmartCommunications__mdt.object
<CustomObject>
    <description>This Custom Metadata Type holds OAuth2.0 Password Grant details</description>
    <fields>
        <fullName>accessTokenUrl__c</fullName>
        <label>Token Endpoint URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>clientId__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientSecret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>credsInHeader__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send client credentials in header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redirectUri__c</fullName>
        <label>Callback URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>scope__c</fullName>
        <label>Default Scopes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SmartCommunications</label>
    <pluralLabel>SmartCommunications</pluralLabel>
</CustomObject>